# ai-news-engine

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ABRIR.bat  ARCHITECTURE.md  AUDIT_2026-06-25.md  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  VER-NOTICIAS.bat  docker-compose.viewer.yml  docker-compose.yml  pyproject.toml  requirements.txt  stories_dump.json  viewer.html
.github/: dependabot.yml
.github/workflows/: daily.yml  import-once.yml  resend-one.yml  retranslate.yml  telegram-test.yml  weekly_email.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_source_group.py  0003_theme_and_importance_tier.py  0004_rep_content_index.py  0005_cluster_notified_at.py  0006_embedding_pruned.py  0007_processed_players.py  0008_cluster_telegram_state.py  0009_title_es_and_image.py  0010_english_enums.py  0011_cluster_linkedin_drafted.py  0012_raw_content_indexes.py  0012_same_event_verdict_cache.py  0013_raw_content_indexes.py
app/: config.py  database.py  links.py  logging_config.py  main.py  middleware.py  url_safety.py
app/ai/: openai_client.py  players.py  prompts.py  sanitize.py
scripts/: apply_topic_filter.py  bump_html_limits.py  db_transfer.py  drop_extra_sources.py  find_channel.py  fix_anthropic_news.py  lock_env.ps1  preview_source.py  purge_promo.py  reset_sources.py  reset_v2.py  reset_v3.py
tests/: conftest.py  test_hashing.py  test_ingestor_dispatch.py  test_players.py  test_prompts.py  test_safe_int.py  test_sanitize.py  test_schemas.py  test_youtube_transcript.py
(+53 files in other folders)
